[gd_scene load_steps=8 format=2]

[ext_resource path="res://Animations/EnemyBasicAnimations.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/EnemyBFT.gd" type="Script" id=2]
[ext_resource path="res://Assets/ProgressBarSkin.tres" type="Theme" id=3]
[ext_resource path="res://Assets/Flash.gdshader" type="Shader" id=4]

[sub_resource type="OccluderPolygon2D" id=2]
polygon = PoolVector2Array( -7, 113, 4, 113, 55, 113, 74, 113, 58, 127, 4, 127 )

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = ExtResource( 4 )
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/flashState = 0.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 57.5, 108 )

[node name="EnemyBasic" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
position = Vector2( -33, -8 )
occluder = SubResource( 2 )

[node name="AnimatedSprite" parent="." instance=ExtResource( 1 )]
material = SubResource( 3 )
frame = 9
flip_h = true

[node name="Area2DEnemyBasic" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DEnemyBasic"]
shape = SubResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="ProgressBar" type="ProgressBar" parent="Control"]
margin_left = -40.0
margin_top = -119.0
margin_right = 40.0
margin_bottom = -114.0
theme = ExtResource( 3 )
max_value = 2.0
value = 2.0
percent_visible = false

[node name="AudioPlayer" type="AudioStreamPlayer2D" parent="."]
