[gd_scene load_steps=16 format=2]

[ext_resource path="res://Sprites/FastEnemyWalk/FastEnemy-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/EnemyBFT.gd" type="Script" id=2]
[ext_resource path="res://Assets/ProgressBarSkin.tres" type="Theme" id=32]
[ext_resource path="res://Assets/FlashMaterial.tres" type="Material" id=33]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 57.5, 108 )

[sub_resource type="OccluderPolygon2D" id=3]
polygon = PoolVector2Array( -7, 113, 4, 113, 57, 113, 74, 113, 58, 127, 1, 127 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 128, 256 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 128, 256 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 128, 256 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 128, 256 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 128, 256 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 640, 0, 128, 256 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 768, 0, 128, 256 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 896, 0, 128, 256 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "run",
"speed": 15.0
} ]

[node name="EnemyFast" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Area2DEnemyBasic" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DEnemyBasic"]
position = Vector2( 2.5, -1 )
shape = SubResource( 1 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
position = Vector2( -33, -6 )
occluder = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 33 )
frames = SubResource( 2 )
animation = "run"
frame = 2
playing = true
flip_h = true

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="ProgressBar" type="ProgressBar" parent="Control"]
margin_left = -36.0
margin_top = -119.0
margin_right = 36.0
margin_bottom = -114.0
theme = ExtResource( 32 )
max_value = 2.0
value = 2.0
percent_visible = false

[node name="AudioPlayer" type="AudioStreamPlayer2D" parent="."]
